WIP - try out gradle init